[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "zero-pairing"
description = 'tate pairing implementation'
version = "0.1.11"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/zero-network/zero/'
repository = 'https://github.com/zero-network/zero/'
readme = 'README.md'

[dependencies]
zero-crypto = { version = "0.1.11", default-features = false }
zero-bls12-381 = { version = "0.1.11", default-features = false }
zero-jubjub = { version = "0.1.11", default-features = false }
parity-scale-codec = { version = "2.1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
rand_core = { version="0.6.4", features = ["getrandom"] }
