[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "ec-pairing"
description = 'lifted elgamal encryption implementation'
version = "0.0.10"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[dependencies]
zkstd = { version = "0.0.10", default-features = false }
bls-12-381 = { version = "0.0.10", default-features = false }
jub-jub = { version = "0.0.10", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

[dev-dependencies]
rand_core = { version="0.6.4", features = ["getrandom"] }
